--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,12 @@
         android:theme="@style/Theme.SoTietKiem"
         tools:targetApi="31">
         <activity
-            android:name=".InfoActivity"
+            android:name="InOut.OutMoneyActivity"
             android:exported="false" />
         <activity
-            android:name=".SettingActivity"
+            android:name="InOut.MoneyInActivity"
             android:exported="false" />
-        <activity
-            android:name=".HomeActivity"
-            android:exported="false" />
+
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
@@ -34,7 +32,13 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true" >
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
     </application>
 
 </manifest>
